Fixes z-index issue with topMenu

--- a/wcfsetup/install/files/acp/style/wcf.css
+++ b/wcfsetup/install/files/acp/style/wcf.css
@@ -985,7 +985,7 @@ section.content .content {
 	width: 20px;
 	height: 100%;
 	overflow: hidden;
-	z-index: 150;
+	z-index: 149;
 	opacity: .3;
 }
 
